RESOLVED FIXED255748
[GTK][WPE][Win] ASSERTION FAILED: !mainResourceLoader() || !mainResourceLoader()->defersLoading()
https://bugs.webkit.org/show_bug.cgi?id=255748
Summary [GTK][WPE][Win] ASSERTION FAILED: !mainResourceLoader() || !mainResourceLoade...
Fujii Hironori
Reported 2023-04-20 14:37:24 PDT
[Win] ASSERTION FAILED: !mainResourceLoader() || !mainResourceLoader()->defersLoading() http/tests/security/navigate-when-restoring-cached-page.html http/tests/security/showModalDialog-sync-cross-origin-page-load2.html ASSERTION FAILED: !mainResourceLoader() || !mainResourceLoader()->defersLoading() C:\home\webkit\gb\Source\WebCore\loader/DocumentLoader.cpp(980) : WebCore::DocumentLoader::responseReceived 1 00007FFEE8DA249B WTFCrash 2 00007FFE90192FCE WTFCrashWithInfo 3 00007FFE93798B3F WebCore::DocumentLoader::responseReceived 4 00007FFE93797E10 WebCore::DocumentLoader::responseReceived 5 00007FFE93912FB1 WebCore::CachedRawResource::responseReceived 6 00007FFE9388DA9E WebCore::SubresourceLoader::didReceiveResponse 7 00007FFEE1244D98 WebKit::WebResourceLoader::didReceiveResponse 8 00007FFEDFF599B4 `IPC::callMemberFunction<WebKit::WebResourceLoader,WebKit::WebResourceLoader,void __cdecl(WebCore::ResourceResponse &&,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> &&),std::tuple<WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> > >'::`2'::<lambda_1>::operator()<WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> > 9 00007FFEDFF5C73C std::invoke<`IPC::callMemberFunction<WebKit::WebResourceLoader,WebKit::WebResourceLoader,void __cdecl(WebCore::ResourceResponse &&,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> &&),std::tuple<WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> > >'::`2'::<lambda_1>,WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> > 10 00007FFEDFF59C33 std::_Apply_impl<`IPC::callMemberFunction<WebKit::WebResourceLoader,WebKit::WebResourceLoader,void __cdecl(WebCore::ResourceResponse &&,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> &&),std::tuple<WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> > >'::`2'::<lambda_1>,std::tuple<WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> >,0,1,2,3> 11 00007FFEDFF59F45 std::apply<`IPC::callMemberFunction<WebKit::WebResourceLoader,WebKit::WebResourceLoader,void __cdecl(WebCore::ResourceResponse &&,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> &&),std::tuple<WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> > >'::`2'::<lambda_1>,std::tuple<WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> > > 12 00007FFEDFF5A1C5 IPC::callMemberFunction<WebKit::WebResourceLoader,WebKit::WebResourceLoader,void __cdecl(WebCore::ResourceResponse &&,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> &&),std::tuple<WebCore::ResourceResponse,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> > > 13 00007FFEDFF5BFEC IPC::handleMessage<Messages::WebResourceLoader::DidReceiveResponse,WebKit::WebResourceLoader,WebKit::WebResourceLoader,void __cdecl(WebCore::ResourceResponse &&,enum WebKit::PrivateRelayed,bool,std::optional<WebCore::NetworkLoadMetrics> &&)> 14 00007FFEDFF583DC WebKit::WebResourceLoader::didReceiveWebResourceLoaderMessage 15 00007FFEE1242FA7 WebKit::NetworkProcessConnection::didReceiveMessage 16 00007FFEE09C673D IPC::Connection::dispatchMessage 17 00007FFEE09C63C9 IPC::Connection::dispatchMessage 18 00007FFEE09C5C5D IPC::Connection::dispatchOneIncomingMessage 19 00007FFEE09C8CBF `IPC::Connection::enqueueIncomingMessage'::`19'::<lambda_2>::operator() 20 00007FFEE09CA62B WTF::Detail::CallableWrapper<`IPC::Connection::enqueueIncomingMessage'::`19'::<lambda_2>,void>::call 21 00007FFEE8DB9BE3 WTF::Function<void __cdecl(void)>::operator() 22 00007FFEE8E4C8C8 WTF::RunLoop::performWork 23 00007FFEE8F33171 WTF::RunLoop::wndProc 24 00007FFEE8F330D4 WTF::RunLoop::RunLoopWndProc 25 00007FFF6BC6E858 CallWindowProcW 26 00007FFF6BC6E299 DispatchMessageW 27 00007FFEE8F32636 WTF::RunLoop::run 28 00007FFEE13DD422 WebKit::WebPage::runModal 29 00007FFEE130FF88 WebKit::WebChromeClient::runModal 30 00007FFE93972023 WebCore::Chrome::runModal 31 00007FFE93A29990 WebCore::LocalDOMWindow::showModalDialog
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-27 14:38:18 PDT
Fujii Hironori
Comment 3 2026-05-13 21:47:05 PDT
Fujii Hironori
Comment 4 2026-05-13 22:17:41 PDT
EWS
Comment 5 2026-05-17 22:21:13 PDT
Committed 313392@main (f2c9beb2a707): <https://commits.webkit.org/313392@main> Reviewed commits have been landed. Closing PR #64902 and removing active labels.
Claudio Saavedra
Comment 6 2026-07-04 00:04:38 PDT
Claudio Saavedra
Comment 7 2026-07-04 00:21:49 PDT
EWS
Comment 8 2026-07-04 01:21:48 PDT
Committed 305877.942@webkitglib/2.52 (488eba4eb206): <https://commits.webkit.org/305877.942@webkitglib/2.52> Reviewed commits have been landed. Closing PR #68651 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.