ASSERTION FAILED: !mainResourceLoader() || !mainResourceLoader()->defersLoading() https://bugs.webkit.org/show_bug.cgi?id=255748

Reviewed by Claudio Saavedra.

Some assertions in DocumentLoader failed for some layout tests using
showModalDialog. Those assertions ensured that the loading doesn't proceed
while it defers loading. Those assertions were added for Chromium port. Apple
ports have disabled the assertions. And, in WebKit2,
WebLoaderStrategy::setDefersLoading() does nothing. Those assertions are no
longer needed. Removed them.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::mainReceivedError):
(WebCore::DocumentLoader::finishedLoading):
(WebCore::DocumentLoader::responseReceived):
(WebCore::DocumentLoader::dataReceived):

Canonical link: https://commits.webkit.org/313392@main